<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="60dp">
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/white">

        <RadioButton
            android:id="@+id/technology_zone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/technology_zone"/>

        <RadioButton
            android:id="@+id/technology_ui"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:button="@null"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/technology_ui"/>

        <RadioButton
            android:id="@+id/technology_widget"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:button="@null"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/technology_widget"/>

        <RadioButton
            android:id="@+id/technology_tools"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:button="@null"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/technology_tools"/>

        <RadioButton
            android:id="@+id/technology_question"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:button="@null"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/technology_question"/>

    </RadioGroup>

</LinearLayout>